--- a/designer_qiu_qiu.ui
+++ b/designer_qiu_qiu.ui
@@ -992,7 +992,7 @@
     <widget class="QLabel" name="test_label">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>190</x>
        <y>50</y>
        <width>71</width>
        <height>31</height>
@@ -1010,7 +1010,7 @@
     <widget class="QLabel" name="qiu_label">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>190</x>
        <y>90</y>
        <width>71</width>
        <height>21</height>
@@ -1028,7 +1028,7 @@
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>130</x>
+       <x>270</x>
        <y>10</y>
        <width>811</width>
        <height>29</height>
@@ -1178,9 +1178,9 @@
     <widget class="QTableWidget" name="flash_table">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>270</x>
        <y>50</y>
-       <width>991</width>
+       <width>811</width>
        <height>31</height>
       </rect>
      </property>
@@ -1210,6 +1210,12 @@
      </property>
      <attribute name="horizontalHeaderVisible">
       <bool>false</bool>
+     </attribute>
+     <attribute name="horizontalHeaderMinimumSectionSize">
+      <number>0</number>
+     </attribute>
+     <attribute name="horizontalHeaderDefaultSectionSize">
+      <number>25</number>
      </attribute>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
@@ -1411,9 +1417,9 @@
     <widget class="QTableWidget" name="flash_table_qui">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>270</x>
        <y>90</y>
-       <width>991</width>
+       <width>811</width>
        <height>31</height>
       </rect>
      </property>
@@ -1443,6 +1449,12 @@
      </property>
      <attribute name="horizontalHeaderVisible">
       <bool>false</bool>
+     </attribute>
+     <attribute name="horizontalHeaderMinimumSectionSize">
+      <number>0</number>
+     </attribute>
+     <attribute name="horizontalHeaderDefaultSectionSize">
+      <number>25</number>
      </attribute>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
