--- a/designer_qiu_qiu.ui
+++ b/designer_qiu_qiu.ui
@@ -1416,7 +1416,7 @@
     </widget>
     <widget class="QTableWidget" name="flash_table_qui">
      <property name="enabled">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <property name="geometry">
       <rect>
