--- a/designer_qiu_qiu.ui
+++ b/designer_qiu_qiu.ui
@@ -1181,7 +1181,7 @@
        <x>270</x>
        <y>50</y>
        <width>811</width>
-       <height>31</height>
+       <height>71</height>
       </rect>
      </property>
      <property name="baseSize">
@@ -1203,7 +1203,7 @@
       </size>
      </property>
      <property name="rowCount">
-      <number>1</number>
+      <number>2</number>
      </property>
      <property name="columnCount">
       <number>32</number>
@@ -1220,6 +1220,7 @@
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
      </attribute>
+     <row/>
      <row/>
      <column/>
      <column/>
@@ -1413,246 +1414,54 @@
        <string>DD</string>
       </property>
      </item>
-    </widget>
-    <widget class="QTableWidget" name="flash_table_qui">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>270</x>
-       <y>90</y>
-       <width>811</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="baseSize">
-      <size>
-       <width>3</width>
-       <height>3</height>
-      </size>
-     </property>
-     <property name="lineWidth">
-      <number>3</number>
-     </property>
-     <property name="dragDropOverwriteMode">
-      <bool>true</bool>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>0</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="rowCount">
-      <number>1</number>
-     </property>
-     <property name="columnCount">
-      <number>32</number>
-     </property>
-     <attribute name="horizontalHeaderVisible">
-      <bool>false</bool>
-     </attribute>
-     <attribute name="horizontalHeaderMinimumSectionSize">
-      <number>0</number>
-     </attribute>
-     <attribute name="horizontalHeaderDefaultSectionSize">
-      <number>25</number>
-     </attribute>
-     <attribute name="verticalHeaderVisible">
-      <bool>false</bool>
-     </attribute>
-     <row/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <column/>
-     <item row="0" column="0">
+     <item row="1" column="0">
       <property name="text">
        <string>DD</string>
       </property>
      </item>
-     <item row="0" column="1">
+     <item row="1" column="1">
       <property name="text">
        <string>DD</string>
       </property>
      </item>
-     <item row="0" column="2">
+     <item row="1" column="2">
       <property name="text">
        <string>DD</string>
       </property>
      </item>
-     <item row="0" column="3">
+     <item row="1" column="3">
       <property name="text">
        <string>DD</string>
       </property>
      </item>
-     <item row="0" column="4">
+     <item row="1" column="4">
       <property name="text">
        <string>DD</string>
       </property>
      </item>
-     <item row="0" column="5">
+     <item row="1" column="5">
       <property name="text">
        <string>DD</string>
       </property>
      </item>
-     <item row="0" column="6">
+     <item row="1" column="6">
       <property name="text">
        <string>DD</string>
       </property>
      </item>
-     <item row="0" column="7">
+     <item row="1" column="7">
       <property name="text">
        <string>DD</string>
       </property>
      </item>
-     <item row="0" column="8">
+     <item row="1" column="8">
       <property name="text">
-       <string>DD</string>
+       <string>v</string>
       </property>
      </item>
-     <item row="0" column="9">
+     <item row="1" column="9">
       <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="10">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="11">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="12">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="13">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="14">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="15">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="16">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="17">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="18">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="19">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="20">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="21">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="22">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="23">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="24">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="25">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="26">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="27">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="28">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="29">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="30">
-      <property name="text">
-       <string>DD</string>
-      </property>
-     </item>
-     <item row="0" column="31">
-      <property name="text">
-       <string>DD</string>
+       <string/>
       </property>
      </item>
     </widget>
