--- a/designer_qiu_qiu.ui
+++ b/designer_qiu_qiu.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1116</width>
+    <width>1169</width>
     <height>763</height>
    </rect>
   </property>
@@ -50,7 +50,7 @@
       <rect>
        <x>160</x>
        <y>140</y>
-       <width>42</width>
+       <width>41</width>
        <height>26</height>
       </rect>
      </property>
@@ -61,10 +61,10 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>210</x>
+       <x>250</x>
        <y>140</y>
-       <width>54</width>
-       <height>21</height>
+       <width>31</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
@@ -505,9 +505,9 @@
    <widget class="QFrame" name="frame_2">
     <property name="geometry">
      <rect>
-      <x>559</x>
+      <x>560</x>
       <y>20</y>
-      <width>341</width>
+      <width>401</width>
       <height>81</height>
      </rect>
     </property>
@@ -522,7 +522,7 @@
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>161</width>
+       <width>191</width>
        <height>25</height>
       </rect>
      </property>
@@ -535,7 +535,7 @@
       <rect>
        <x>10</x>
        <y>50</y>
-       <width>161</width>
+       <width>191</width>
        <height>26</height>
       </rect>
      </property>
@@ -584,9 +584,9 @@
     <widget class="QDateTimeEdit" name="datetime_pc">
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>200</x>
        <y>50</y>
-       <width>161</width>
+       <width>191</width>
        <height>26</height>
       </rect>
      </property>
@@ -597,9 +597,9 @@
     <widget class="QPushButton" name="set_datetime_pc">
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>200</x>
        <y>10</y>
-       <width>161</width>
+       <width>191</width>
        <height>25</height>
       </rect>
      </property>
@@ -710,7 +710,7 @@
      <rect>
       <x>560</x>
       <y>110</y>
-      <width>161</width>
+      <width>191</width>
       <height>101</height>
      </rect>
     </property>
@@ -721,41 +721,12 @@
      <enum>QFrame::Sunken</enum>
     </property>
    </widget>
-   <widget class="QPushButton" name="check_button">
-    <property name="geometry">
-     <rect>
-      <x>800</x>
-      <y>120</y>
-      <width>91</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="button_state">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>750</x>
-      <y>120</y>
-      <width>41</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QFrame" name="frame_4">
     <property name="geometry">
      <rect>
-      <x>740</x>
+      <x>770</x>
       <y>110</y>
-      <width>161</width>
+      <width>191</width>
       <height>101</height>
      </rect>
     </property>
@@ -791,113 +762,41 @@
       <string>PlaySound</string>
      </property>
     </widget>
-   </widget>
-   <widget class="QPushButton" name="accu_voltage">
-    <property name="geometry">
-     <rect>
-      <x>990</x>
-      <y>70</y>
-      <width>101</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Accu Voltage</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="usb_voltage">
-    <property name="geometry">
-     <rect>
-      <x>990</x>
-      <y>100</y>
-      <width>101</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>USB Voltage</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="digital_voltage">
-    <property name="geometry">
-     <rect>
-      <x>990</x>
-      <y>130</y>
-      <width>101</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Dig. Voltage</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="all_voltages">
-    <property name="geometry">
-     <rect>
-      <x>920</x>
-      <y>170</y>
-      <width>171</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>All Voltages</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="charge_line">
-    <property name="geometry">
-     <rect>
-      <x>920</x>
-      <y>40</y>
-      <width>61</width>
-      <height>25</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="accu_line">
-    <property name="geometry">
-     <rect>
-      <x>920</x>
-      <y>70</y>
-      <width>61</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="usb_line">
-    <property name="geometry">
-     <rect>
-      <x>920</x>
-      <y>100</y>
-      <width>61</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="dig_line">
-    <property name="geometry">
-     <rect>
-      <x>920</x>
-      <y>130</y>
-      <width>61</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
+    <widget class="QLineEdit" name="button_state">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>41</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="check_button">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>10</y>
+       <width>91</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>PushButton</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="frame_5">
     <property name="geometry">
      <rect>
-      <x>909</x>
-      <y>19</y>
+      <x>970</x>
+      <y>20</y>
       <width>191</width>
       <height>191</height>
      </rect>
@@ -919,6 +818,107 @@
      </property>
      <property name="text">
       <string>Charge State</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="charge_line">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>61</width>
+       <height>25</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="accu_line">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>61</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="usb_line">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>80</y>
+       <width>61</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="dig_line">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>110</y>
+       <width>61</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="digital_voltage">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>110</y>
+       <width>101</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Dig. Voltage</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="all_voltages">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>150</y>
+       <width>171</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>All Voltages</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="accu_voltage">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>50</y>
+       <width>101</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Accu Voltage</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="usb_voltage">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>80</y>
+       <width>101</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>USB Voltage</string>
      </property>
     </widget>
    </widget>
@@ -1567,7 +1567,7 @@
       <number>3</number>
      </property>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>20</x>
@@ -1876,16 +1876,6 @@
    <zorder>x_label</zorder>
    <zorder>y_label</zorder>
    <zorder>z_label</zorder>
-   <zorder>check_button</zorder>
-   <zorder>button_state</zorder>
-   <zorder>accu_voltage</zorder>
-   <zorder>usb_voltage</zorder>
-   <zorder>digital_voltage</zorder>
-   <zorder>all_voltages</zorder>
-   <zorder>charge_line</zorder>
-   <zorder>accu_line</zorder>
-   <zorder>usb_line</zorder>
-   <zorder>dig_line</zorder>
    <zorder>graph</zorder>
    <zorder>earclip_btn</zorder>
    <zorder>earclip_line</zorder>
