--- a/designer_qiu_qiu.ui
+++ b/designer_qiu_qiu.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1364</width>
+    <width>1555</width>
     <height>756</height>
    </rect>
   </property>
@@ -724,7 +724,7 @@
    <widget class="QFrame" name="frame_4">
     <property name="geometry">
      <rect>
-      <x>730</x>
+      <x>720</x>
       <y>110</y>
       <width>141</width>
       <height>101</height>
@@ -736,72 +736,74 @@
     <property name="frameShadow">
      <enum>QFrame::Sunken</enum>
     </property>
-    <widget class="QLineEdit" name="button_state">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>10</y>
-       <width>41</width>
-       <height>25</height>
+       <y>0</y>
+       <width>121</width>
+       <height>95</height>
       </rect>
      </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="check_button">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>10</y>
-       <width>81</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>PushButton</string>
-     </property>
-    </widget>
-    <widget class="QWidget" name="layoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>40</y>
-       <width>128</width>
-       <height>62</height>
-      </rect>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_3">
-      <item row="0" column="0">
-       <widget class="QSpinBox" name="spin_sound_load">
-        <property name="maximum">
-         <number>5</number>
-        </property>
-       </widget>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLineEdit" name="button_state">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="check_button">
+          <property name="text">
+           <string>PushButton</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="load_sound_btn">
-        <property name="text">
-         <string>LoadSound</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QSpinBox" name="spin_sound">
-        <property name="maximum">
-         <number>5</number>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QPushButton" name="play_sound">
-        <property name="text">
-         <string>PlaySound</string>
-        </property>
-       </widget>
+      <item>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="0" column="1">
+         <widget class="QPushButton" name="load_sound_btn">
+          <property name="text">
+           <string>LoadSound</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QSpinBox" name="spin_sound_load">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>4</number>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QSpinBox" name="spin_sound">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>4</number>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QPushButton" name="play_sound">
+          <property name="text">
+           <string>PlaySound</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
@@ -993,7 +995,7 @@
      <rect>
       <x>10</x>
       <y>220</y>
-      <width>1231</width>
+      <width>1051</width>
       <height>101</height>
      </rect>
     </property>
@@ -1044,7 +1046,7 @@
       <rect>
        <x>270</x>
        <y>10</y>
-       <width>941</width>
+       <width>771</width>
        <height>31</height>
       </rect>
      </property>
@@ -1286,7 +1288,7 @@
       <rect>
        <x>270</x>
        <y>60</y>
-       <width>941</width>
+       <width>771</width>
        <height>31</height>
       </rect>
      </property>
