--- a/designer_qiu_qiu.ui
+++ b/designer_qiu_qiu.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1066</width>
+    <width>1244</width>
     <height>756</height>
    </rect>
   </property>
@@ -144,7 +144,7 @@
    <widget class="QFrame" name="LED">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>510</x>
       <y>20</y>
       <width>241</width>
       <height>191</height>
@@ -505,7 +505,7 @@
    <widget class="QFrame" name="frame_2">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>760</x>
       <y>20</y>
       <width>301</width>
       <height>81</height>
@@ -611,7 +611,7 @@
    <widget class="QLineEdit" name="x_value">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>770</x>
       <y>120</y>
       <width>41</width>
       <height>25</height>
@@ -621,7 +621,7 @@
    <widget class="QLineEdit" name="y_value">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>770</x>
       <y>150</y>
       <width>41</width>
       <height>25</height>
@@ -631,7 +631,7 @@
    <widget class="QLineEdit" name="z_value">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>770</x>
       <y>180</y>
       <width>41</width>
       <height>25</height>
@@ -641,7 +641,7 @@
    <widget class="QPushButton" name="get_accl_btn">
     <property name="geometry">
      <rect>
-      <x>640</x>
+      <x>840</x>
       <y>150</y>
       <width>71</width>
       <height>25</height>
@@ -654,7 +654,7 @@
    <widget class="QLabel" name="x_label">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>820</x>
       <y>120</y>
       <width>16</width>
       <height>21</height>
@@ -672,7 +672,7 @@
    <widget class="QLabel" name="y_label">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>820</x>
       <y>150</y>
       <width>16</width>
       <height>21</height>
@@ -690,7 +690,7 @@
    <widget class="QLabel" name="z_label">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>820</x>
       <y>180</y>
       <width>16</width>
       <height>21</height>
@@ -708,7 +708,7 @@
    <widget class="QFrame" name="frame_3">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>760</x>
       <y>110</y>
       <width>161</width>
       <height>101</height>
@@ -724,7 +724,7 @@
    <widget class="QFrame" name="frame_4">
     <property name="geometry">
      <rect>
-      <x>720</x>
+      <x>920</x>
       <y>110</y>
       <width>141</width>
       <height>101</height>
@@ -736,13 +736,13 @@
     <property name="frameShadow">
      <enum>QFrame::Sunken</enum>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>121</width>
-       <height>81</height>
+       <width>130</width>
+       <height>95</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
@@ -811,7 +811,7 @@
    <widget class="QFrame" name="frame_5">
     <property name="geometry">
      <rect>
-      <x>870</x>
+      <x>300</x>
       <y>20</y>
       <width>191</width>
       <height>191</height>
@@ -1897,9 +1897,6 @@
    <zorder>earclip_line</zorder>
    <zorder>frame_10</zorder>
    <zorder>LED</zorder>
-   <zorder>button_state</zorder>
-   <zorder>check_button</zorder>
-   <zorder>layoutWidget</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
